syntax = "proto3";
import "rpc_user.proto";

option java_multiple_files = true;
option java_package = "via.dk.elearn.protobuf";

service QuestionService {
  rpc GetQuestion (QuestionUrl) returns (QuestionModel);
  rpc GetAllQuestion (NewQuestionRequest) returns (stream QuestionModel);
  rpc CreateNewQuestion(QuestionModel) returns (QuestionModel);
  rpc GetQuestionsByUserId(QuestionUserId) returns (QuestionModel);
}


message NewQuestionRequest {

}

message QuestionUserId{
  UserId userId=1;

}
message QuestionUrl {
  string url = 1;
}

message QuestionModel {
  int64 id = 1;
  string title = 2;
  string body = 3;
  string url = 4;
  string dateCreated = 5;
  int64 correctAnswer = 6;
}